changed styles of submit button to align better

--- a/starter/css/styles.css
+++ b/starter/css/styles.css
@@ -124,6 +124,10 @@ nav {
     display:flex;
     flex-direction:column;
     align-items: center;
+
+    & button {
+        align-self: flex-start;
+    }
 }
 
 #messageError, #emailError {
