--- a/starter/css/styles.css
+++ b/starter/css/styles.css
@@ -150,7 +150,8 @@ nav {
     width: 100%;
     overflow-x: auto;
     gap: 20px;
-    padding: 0 40px 0 20px;
+    margin-left: 20px;
+    padding: 0 40px 0 0;
     scroll-behavior: smooth;
     -ms-overflow-style: none;
 
@@ -350,6 +351,7 @@ nav {
         height: 100%;
         overflow: auto;
         padding: 0 0 0 20px;
+        margin-left: 0;
         width: 250px;
         align-items: center;
     }
